Fixed misaligned customer account icon om mobile device

--- a/web/css/layout/_header.less
+++ b/web/css/layout/_header.less
@@ -172,7 +172,8 @@
         }
 
         @media @media-md-down {
-            span {
+            span,
+            strong:has(span) {
                 display: none;
             }
         }
